Fixed footer size on smaller devices

--- a/docs/main.css
+++ b/docs/main.css
@@ -301,10 +301,10 @@ a img {
 .waves {
   position: relative;
   width: 100%;
-  height: 15vh;
-  margin-bottom: -10px; /*Fix for safari gap*/
+  height: 10vh;
+  margin-bottom: -8px; /*Fix for safari gap*/
   min-height: 100px;
-  max-height: 150px;
+  max-height: 100px;
 }
 
 .footer_text {
@@ -357,6 +357,6 @@ a img {
     min-height: 40px;
   }
   .footer_text {
-    height: 30vh;
+    height: 7vh;
   }
 }
