--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -301,10 +301,10 @@ opacity: 0;
 .waves {
   position:relative;
   width: 100%;
-  height:15vh;
-  margin-bottom:-10px; /*Fix for safari gap*/
+  height:10vh;
+  margin-bottom:-8px; /*Fix for safari gap*/
   min-height:100px;
-  max-height:150px;
+  max-height:100px;
 }
 .footer_text {
     display: flex;
@@ -352,6 +352,6 @@ opacity: 0;
       min-height:40px;
     }
     .footer_text {
-        height:30vh;
+        height:7vh;
       }
 }
